ansible/roles/cluster_config/files/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ingress
  labels:
    name: kube-ingress
