ansible/roles/cluster_config/files/rook-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
