ansible/roles/cluster_config/files/scratch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scratch
