ansible/roles/cluster_config/files/controlplane-logshipper-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: controlplane-logshipper
  namespace: kube-system
  labels:
    app: controlplane-logshipper
spec:
  template:
    metadata:
      labels:
        app: controlplane-logshipper
        name: controlplane-logshipper
    spec:
      serviceAccount: controlplane-logshipper
      terminationGracePeriodSeconds: 60
      containers:
      - image:  docker.elastic.co/beats/filebeat:5.6.3
        name: controlplane-logshipper
        imagePullPolicy: Always
        command: ["/usr/share/filebeat/filebeat"]
        args: ["-e", "-c", "/usr/share/filebeat/controlplane-logshipper.yml"]
        securityContext:
          runAsUser: 0
        resources:
          requests:
            cpu: 200m
            memory: 400Mi
          limits:
            cpu: 600m
            memory: 800Mi
        volumeMounts:
          - name: data
            mountPath: /data
          - name: container-data
            mountPath: /var/lib/docker/containers
          - name: pod-data
            mountPath: /var/log/pods
          - name: filebeat-data
            mountPath: /var/lib/filebeat
          - name: audit-data
            mountPath: /var/log/apiserver
          - name: uninett-ca-crt
            mountPath: /etc/ssl/private
          - name: config
            mountPath: /usr/share/filebeat/controlplane-logshipper.yml
            subPath: controlplane-logshipper.yml
      volumes:
        - name: data
          hostPath:
            path: /var/log/containers
        - name: container-data
          hostPath:
            path: /var/lib/docker/containers
        - name: pod-data
          hostPath:
            path: /var/log/pods
        - name: filebeat-data
          hostPath:
            path: /var/lib/filebeat
        - name: audit-data
          hostPath:
            path: /var/log/apiserver
        - name: uninett-ca-crt
          configMap:
            name: uninett-ca-crt
            items:
            - key: uninett-ca-crt.pem
              path: uninett-ca-crt.pem
        - name: config
          secret:
            secretName: controlplane-logshipper-config
            items:
            - key: controlplane-logshipper.yml
              path: controlplane-logshipper.yml
