ansible/roles/cluster_config/files/journalbeat-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: journalbeat
  namespace: kube-system
  labels:
    app: journalbeat
spec:
  template:
    metadata:
      labels:
        app: journalbeat
        name: journalbeat
    spec:
      serviceAccount: journalbeat
      terminationGracePeriodSeconds: 60
      containers:
      - image:  mheese/journalbeat:v5.5.2
        name: journalbeat
        imagePullPolicy: Always
        command: ["/journalbeat"]
        args: ["-e", "-c", "/etc/journalbeat.yml"]
        resources:
          requests:
            cpu: 200m
            memory: 400Mi
          limits:
            cpu: 600m
            memory: 800Mi
        volumeMounts:
          - name: data
            mountPath: /data
          - name: var-journal
            mountPath: /var/log/journal
          - name: run-journal
            mountPath: /run/log/journal
          - name: config
            mountPath: /etc/journalbeat.yml
          - name: machine-id
            mountPath: /etc/machine-id
          - name: uninett-ca-crt
            mountPath: /etc/ssl/private
      volumes:
        - name: data
          hostPath:
            path: /var/lib/journalbeat
        - name: var-journal
          hostPath:
            path: /var/log/journal
        - name: run-journal
          hostPath:
            path: /run/log/journal
        - name: machine-id
          hostPath:
            path: /etc/machine-id
        - name: uninett-ca-crt
          configMap:
            name: uninett-ca-crt
            items:
            - key: uninett-ca-crt.pem
              path: uninett-ca-crt.pem
        - name: config
          secret:
            secretName: journalbeat-config
            items:
            - key: journalbeat.yml
              path: journalbeat.yml
