ansible/roles/cluster_config/files/heapster.yaml
# Uninett TODO:
# To be retired, Heapster is EOL upstream
# kubernetes Dashboard depend on it until this issue has been fixed:
# https://github.com/kubernetes/dashboard/issues/2986
---

kind: Service
apiVersion: v1
metadata:
  name: heapster
  namespace: kube-system
  labels:
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Heapster"
spec:
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: heapster

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster
  namespace: kube-system
  labels:
    app: heapster
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heapster
  template:
    metadata:
      labels:
        app: heapster
      annotations:
        scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
    spec:
      priorityClassName: system-node-critical
      serviceAccountName: heapster
      containers:
        - image: gcr.io/google_containers/heapster:v1.3.0
          name: heapster
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 5
          command:
            - /heapster
            - --source=kubernetes.summary_api:''
        - image: gcr.io/google_containers/addon-resizer:1.7
          name: heapster-nanny
          resources:
            limits:
              cpu: 50m
              memory: 90Mi
            requests:
              cpu: 50m
              memory: 90Mi
          command:
            - /pod_nanny
            - --cpu=80m
            - --extra-cpu=4m
            - --memory=200Mi
            - --extra-memory=4Mi
            - --threshold=5
            - --deployment=heapster
            - --container=heapster
            - --poll-period=300000
            - --estimator=exponential

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: heapster
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: heapster
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-system
      ports:
        - protocol: TCP
          port: 8082
