ansible/roles/cluster_config/files/kube-lego.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego-nginx
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-lego
    spec:
      serviceAccount: kube-lego
      containers:
      - name: kube-lego-nginx
        image: jetstack/kube-lego:0.1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: kube-lego-backend
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: kube-lego
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nginx-ingress-lb
      ports:
        - protocol: tcp
          port: 8080
