ansible/roles/cluster_config/files/kube-selftest.yaml

kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: kube-selftest
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        app: kube-selftest
    spec:
      serviceAccount: kube-selftest
      containers:
        - name: kube-selftest
          image: registry.uninett.no/public/kube-selftest-service:v0.2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - mountPath: /app/selftest-status-dir
              name: selftest-status-dir
      volumes:
        - name: selftest-status-dir
          hostPath:
            path: /run/selftest

---

apiVersion: v1
kind: Service
metadata:
  name: kube-selftest
  namespace: kube-system
spec:
  type: ClusterIP
  selector:
    app: kube-selftest
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: kube-selftest
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: kube-selftest
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kube-selftest
      ports:
        - protocol: tcp
          port: 80
