ansible/roles/cluster_config/files/kube-system.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kube-system
  labels:
    name: kube-system

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
    name: default-deny
    namespace: kube-system
