ansible/roles/cluster_config/files/nginx-ingress.yaml

apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
  namespace: kube-system
  labels:
    app: nginx-ingress-lb
spec:
  template:
    metadata:
      labels:
        app: nginx-ingress-lb
    spec:
      serviceAccount: nginx-ingress
      terminationGracePeriodSeconds: 60
      nodeSelector:
        lb: "true"
      containers:
        - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
          name: nginx-ingress-lb
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          # use downward API
          args:
            - /nginx-ingress-controller
            - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
            - --nginx-configmap=$(POD_NAMESPACE)/nginx-ingress-controller


---

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  namespace: kube-system
  annotations:
    service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  type: NodePort
  selector:
    app: nginx-ingress-lb
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 80
    - name: https
      protocol: TCP
      port: 443
      nodePort: 443

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: nginx-ingress-lb
  namespace: kube-system
spec:
 podSelector:
   matchLabels:
     app: nginx-ingress-lb
 ingress:
   - ports:
       - protocol: tcp
         port: 80
       - protocol: tcp
         port: 443

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      serviceAccount: nginx-ingress
      terminationGracePeriodSeconds: 60
      containers:
        - name: default-http-backend
          # Any image is permissable as long as:
          # 1. It serves a 404 page at /
          # 2. It serves 200 on a /healthz endpoint
          image: gcr.io/google_containers/defaultbackend:1.0
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi

---

apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: kube-system
  labels:
    app: default-http-backend
spec:
  type: ClusterIP
  selector:
    app: default-http-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: default-http-backend
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: default-http-backend
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nginx-ingress-lb
      ports:
        - protocol: tcp
          port: 8080
